【功能】添加路由跳转的视图切换

--- a/src/container/index/index.less
+++ b/src/container/index/index.less
@@ -1,4 +1,4 @@
-.main {
+.index {
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -11,5 +11,8 @@
     width: 400px;
     height: 260px;
     background-image: url('~static/images/universe.png');
+  }
+  h1 {
+    color: #fff;
   }
 }
