--- a/src/main.less
+++ b/src/main.less
@@ -1,18 +1,21 @@
-* {
-  margin: 0;
-  padding: 0;
-}
-
-ul {
-  li {
-    list-style: none;
-  }
-}
-
 html,
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'PingFang SC', 'Hiragino Sans GB', 'Microsoft YaHei',
     'Helvetica Neue', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   width: 100%;
+  height: 100%;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
+ul, p {
+  margin: 0;
+  padding: 0;
+}
+li {
+  list-style: none;
+}
+#root {
   height: 100%;
 }
