--- a/src/main.less
+++ b/src/main.less
@@ -9,7 +9,8 @@ body {
   margin: 0;
   padding: 0;
 }
-ul, p {
+ul,
+p {
   margin: 0;
   padding: 0;
 }
@@ -35,5 +36,5 @@ li {
 ::-webkit-scrollbar-thumb {
   border-radius: 2px;
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  background-color: #0893FD;
+  background-color: #0893fd;
 }
