【新增功能】- 优化大屏目录，增加demo

--- a/src/common/largescreen/common/logoHeader/index.less
+++ b/src/common/largescreen/common/logoHeader/index.less
@@ -25,7 +25,7 @@
 }
 
 .largeScreen_HeaderLogo_HeaderText {
-  font-family: 'ZKQKJHT';
+  // font-family: 'ZKQKJHT';
   font-size: 5vh;
   text-align: center;
   color: #fff;
