--- a/src/common/largescreen/common/dateAndCity/index.less
+++ b/src/common/largescreen/common/dateAndCity/index.less
@@ -16,7 +16,7 @@
     height: 4vh;
     // font-family: 'myFont';
     cursor: pointer;
-    border: none
+    border: none;
     background-color: transparent;
     box-shadow: none;
     padding: 0;
